tests/specs/class_private_property.txt
{ "private": true }
# mod.ts
export class Class {
  private property = "";
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class {
  | ^

# output.txt
Defined in file:///mod.ts:0:1

class Class

  private property: string


# output.json
{
  "symbols": [
    {
      "name": "Class",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "class",
          "def": {
            "properties": [
              {
                "tsType": {
                  "repr": "string",
                  "kind": "keyword",
                  "value": "string"
                },
                "accessibility": "private",
                "name": "property",
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 1,
                  "col": 2,
                  "byteIndex": 23
                }
              }
            ]
          }
        }
      ]
    }
  ]
}
